k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watterssu-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: watterssu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: watterssu-frontend-service
            port:
              number: 80
